# engine

./: .gitignore  CMakeLists.txt  COMPARE  Color.h  Figure.cpp  Figure.h  Light.h  Line2D.cpp  Line2D.h  Makefile  README.md  ZBuffer.cpp  ZBuffer.h  compare  easy_image.cc  easy_image.h  engine.cc  ini_configuration.cc  ini_configuration.h  runall.sh
io intro/: Intro1_ColorRectangle.ini  Intro3_lines_diamond.ini  Intro3_lines_quartercircle.ini
io tests/: compare.sh
io tests/io line_drawings/: line_drawings001.ini
io tests/io wireframes/: Fig20_2.L3D
l_parser/: l_parser.cc
vector/: vector3d.cc  vector3d.h
